[gd_scene format=3 uid="uid://c6yl3uql5p2cb"]

[ext_resource type="FontFile" uid="uid://dxe7owqfwqgt3" path="res://letter/ARCADECLASSIC.TTF" id="1_klgdb"]
[ext_resource type="Script" uid="uid://dvxgfnojay4v0" path="res://scenes/menu/menu.gd" id="1_mcvr8"]
[ext_resource type="PackedScene" uid="uid://cdaifmewx80m6" path="res://scenes/ui/Background/Background.tscn" id="2_e0arn"]

[node name="Menu" type="Control" unique_id=139446426]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcvr8")
metadata/_edit_use_anchors_ = true

[node name="Background" parent="." unique_id=1340641396 instance=ExtResource("2_e0arn")]

[node name="TitleLabel" type="Label" parent="." unique_id=850075646]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0017361111
anchor_top = -0.043209877
anchor_right = 1.0002639
anchor_bottom = 0.95679015
offset_top = 67.0
offset_right = -0.30407715
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_klgdb")
theme_override_font_sizes/font_size = 200
text = "DOG  JUMP"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonsContainer" type="VBoxContainer" parent="." unique_id=2011309504]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29947916
anchor_top = 0.46141976
anchor_right = 0.6927083
anchor_bottom = 0.8634259
offset_top = 2.5
offset_bottom = -2.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="ButtonsContainer" unique_id=962442134]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_klgdb")
theme_override_font_sizes/font_size = 50
text = "PLAY"

[node name="OptionsButton" type="Button" parent="ButtonsContainer" unique_id=696152608]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_klgdb")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="QuitButton" type="Button" parent="ButtonsContainer" unique_id=628268929]
custom_minimum_size = Vector2(300, 70)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_klgdb")
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="pressed" from="ButtonsContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
